Security: Update Next.js to latest (fix CVE-2025-55182)

--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "mongodb": "latest",
     "mongodb-client-encryption": "latest",
     "mongoose": "^9.0.1",
-    "next": "15.2.4",
+    "next": "latest",
     "next-seo": "^6.8.0",
     "next-themes": "latest",
     "react": "^19",
